<resources>
    <string name="app_name">Shinobi Client</string>
    <!-- Strings related to login -->
    <string name="use_tls">Use TLS</string>
    <string name="prompt_server">Server</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_server">Please enter a valid server name</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_incorrect_password">This password is incorrect</string>
</resources>
